fixed overflow

--- a/home/static/home/styleshome.css
+++ b/home/static/home/styleshome.css
@@ -3,7 +3,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow: hidden;
   font-family: "Montserrat", sans-serif;
 }
 
